footer socail media links updated

--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
                                     <tr>
                                       <td style="padding: 0 10px 0 10px">
                                         <a
-                                          href="https://www.facebook.com/"
+                                          href="https://m.facebook.com/Morph-Athletic-111249013932706/"
                                           target="_blank"
                                           ><img
                                             alt="Facebook"
@@ -1275,7 +1275,7 @@
                                       </td>
                                       <td style="padding: 0 10px 0 10px">
                                         <a
-                                          href="https://twitter.com/"
+                                          href="https://twitter.com/morphathletica"
                                           target="_blank"
                                           ><img
                                             alt="Twitter"
@@ -1292,7 +1292,7 @@
                                       </td>
                                       <td style="padding: 0 10px 0 10px">
                                         <a
-                                          href="https://instagram.com/"
+                                          href="https://www.instagram.com/morphathletic/"
                                           target="_blank"
                                           ><img
                                             alt="Instagram"
