--- a/index.html
+++ b/index.html
@@ -1358,50 +1358,18 @@
                                           mso-line-height-alt: 28.8px;
                                         "
                                       >
-                                        <span
+                                        <!-- <span
                                           style="
                                             font-size: 16px;
                                             color: #ffffff;
                                           "
-                                          >This email was sent to name@email.com
-                                          by Company Name</span
+                                          >This email by Morph Athletic</span
                                         >
                                       </p>
-                                      <p
-                                        style="
-                                          margin: 0;
-                                          font-size: 14px;
-                                          text-align: center;
-                                          mso-line-height-alt: 28.8px;
-                                        "
-                                      >
-                                        <span
-                                          style="
-                                            font-size: 16px;
-                                            color: #ffffff;
-                                          "
-                                          >Street, City, State, ZIP</span
-                                        >
-                                      </p>
-                                      <p
-                                        style="
-                                          margin: 0;
-                                          font-size: 14px;
-                                          text-align: center;
-                                          mso-line-height-alt: 28.8px;
-                                        "
-                                      >
-                                        <span
-                                          style="
-                                            font-size: 16px;
-                                            color: #ffffff;
-                                          "
-                                          ><u>Email Us</u> or
-                                          <u>Unsubscribe</u></span
-                                        >
+                                       -->
                                       </p>
                                     </div>
-                                  </div>
+                                
                                 </td>
                               </tr>
                             </table>
@@ -1627,7 +1595,7 @@
                                                 padding-right: 6px;
                                               "
                                             >
-                                              <a
+                                              <!-- <a
                                                 href="https://www.designedwithbee.com/"
                                                 style="text-decoration: none"
                                                 target="_blank"
@@ -1636,7 +1604,7 @@
                                                   alt="Designed with BEE"
                                                   class="icon"
                                                   height="32"
-                                                  src="images/bee.png"
+                                                  src="#"
                                                   style="
                                                     display: block;
                                                     height: auto;
@@ -1644,7 +1612,7 @@
                                                     border: 0;
                                                   "
                                                   width="34"
-                                              /></a>
+                                              /></a> -->
                                             </td>
                                             <td
                                               style="
@@ -1657,15 +1625,15 @@
                                                 text-align: center;
                                               "
                                             >
-                                              <a
-                                                href="https://www.designedwithbee.com/"
-                                                style="
-                                                  color: #9d9d9d;
-                                                  text-decoration: none;
-                                                "
-                                                target="_blank"
-                                                >Designed with BEE</a
-                                              >
+                                            <span
+                                            style="
+                                              font-size: 16px;
+                                              color: #ffffff;
+                                            "
+                                            >This email by Morph Athletic</span
+                                          >
+                                        </p>
+                                        
                                             </td>
                                           </tr>
                                         </table>
