--- a/index.html
+++ b/index.html
@@ -881,8 +881,8 @@
                                             color: #000080;
                                             font-size: 96px;
                                           "
-                                          ><span style=""
-                                            ><strong>50% OFF</strong></span
+                                          ><span style =""
+                                            ><strong> 20% OFF</strong></span
                                           ></span
                                         >
                                       </p>
@@ -985,11 +985,7 @@
                                             font-size: 28px;
                                             color: #000080;
                                           "
-                                          >Lorem ipsum dolor sit amet,
-                                          consectetur adipiscing elita. Eros in
-                                          cursus turpis massa tincidunt. Massa
-                                          sapien faucibus et molestised
-                                          lectus.</span
+                                          >Happy Independence day! I'm excited to announce the promotion for 4th of July. Our store is up to 20% off go check it out.</span
                                         >
                                       </p>
                                       <p
@@ -1088,80 +1084,7 @@
                                     </div>
                                     <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                   </div>
-                                </td>
-                              </tr>
-                            </table>
-                            <table
-                              border="0"
-                              cellpadding="0"
-                              cellspacing="0"
-                              class="text_block"
-                              role="presentation"
-                              style="
-                                mso-table-lspace: 0pt;
-                                mso-table-rspace: 0pt;
-                                word-break: break-word;
-                              "
-                              width="100%"
-                            >
-                              <tr>
-                                <td
-                                  style="
-                                    padding-bottom: 10px;
-                                    padding-left: 35px;
-                                    padding-right: 35px;
-                                    padding-top: 35px;
-                                  "
-                                >
-                                  <div
-                                    style="
-                                      font-family: Tahoma, Verdana, sans-serif;
-                                    "
-                                  >
-                                    <div
-                                      class="txtTinyMce-wrapper"
-                                      style="
-                                        font-size: 12px;
-                                        font-family: 'Roboto', Tahoma, Verdana,
-                                          Segoe, sans-serif;
-                                        mso-line-height-alt: 14.399999999999999px;
-                                        color: #ffffff;
-                                        line-height: 1.2;
-                                      "
-                                    >
-                                      <p style="margin: 0; text-align: center">
-                                        <span
-                                          style="
-                                            font-size: 20px;
-                                            color: #808080;
-                                          "
-                                          >Lorem ipsum dolor sit amet,
-                                          consectetur adipiscing elita. Eros in
-                                          cursus turpis massa tincidunt. Massa
-                                          sapien faucibus et molestised
-                                          lectus.</span
-                                        >
-                                      </p>
-                                      <p
-                                        style="
-                                          margin: 0;
-                                          text-align: center;
-                                          mso-line-height-alt: 14.399999999999999px;
-                                        "
-                                      >
-                                         
-                                      </p>
-                                      <p
-                                        style="
-                                          margin: 0;
-                                          text-align: center;
-                                          mso-line-height-alt: 14.399999999999999px;
-                                        "
-                                      >
-                                         
-                                      </p>
-                                    </div>
-                                  </div>
+                                
                                 </td>
                               </tr>
                             </table>
@@ -1630,7 +1553,7 @@
                                               font-size: 16px;
                                               color: #ffffff;
                                             "
-                                            >This email by Morph Athletic</span
+                                            >Emailed by Morph Athletic</span
                                           >
                                         </p>
                                         
