--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                           ><img
                                             alt="Facebook"
                                             height="32"
-                                            src="images/facebook2x-1.png"
+                                            src="https://drive.google.com/uc?id=1ZiNzLLyAbkwnpM27I4ymsgoc18kRVO7P"
                                             style="
                                               display: block;
                                               height: auto;
@@ -570,7 +570,7 @@
               style="
                 mso-table-lspace: 0pt;
                 mso-table-rspace: 0pt;
-                background-image: url('images/fireworks-640-3.png');
+                background-image: url('https://drive.google.com/uc?id=1MjcBPZ96QXkPnJrDp33-Ck6KpkhF7wRT');
                 background-position: top center;
                 background-repeat: no-repeat;
               "
@@ -637,7 +637,7 @@
                                   <div align="center" style="line-height: 10px">
                                     <img
                                       alt="Alternate text"
-                                      src="images/Happy-05-02.png"
+                                      src="https://drive.google.com/uc?id=1KJO7YLVLRgr1LZBvkeg2o_LRUv-BTjsv"
                                       style="
                                         display: block;
                                         height: auto;
@@ -1144,7 +1144,7 @@
                                           ><img
                                             alt="Facebook"
                                             height="32"
-                                            src="images/facebook2x.png"
+                                            src="https://drive.google.com/uc?id=1d7VsqinC5N75O76H1V53sgeO5otSCJix"
                                             style="
                                               display: block;
                                               height: auto;
@@ -1178,7 +1178,7 @@
                                           ><img
                                             alt="Instagram"
                                             height="32"
-                                            src="images/instagram2x.png"
+                                            src="https://drive.google.com/uc?id=12mONEcVywJ3UI7NUayN59oe3Y-gzenab"
                                             style="
                                               display: block;
                                               height: auto;
