icons added for social media

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                           ><img
                                             alt="Twitter"
                                             height="32"
-                                            src="images/twitter2x-1.png"
+                                            src="https://drive.google.com/uc?id=14g-mg4J575Px1Qzygm0rYDBuHuNmVPiP"
                                             style="
                                               display: block;
                                               height: auto;
@@ -435,7 +435,7 @@
                                           ><img
                                             alt="Instagram"
                                             height="32"
-                                            src="images/instagram2x-1.png"
+                                            src="https://drive.google.com/uc?id=12jWogSd_Jnh5bu8TKUqW9wnjerv_R7SP"
                                             style="
                                               display: block;
                                               height: auto;
@@ -985,7 +985,7 @@
                                             font-size: 28px;
                                             color: #000080;
                                           "
-                                          >Happy Independence day! I'm excited to announce the promotion for 4th of July. Our store is up to 20% off go check it out.</span
+                                          >Happy Independence day! I'm excited to announce the promotion for 4th of July. Our store is up to 20% off at Morph Athletic go check it out.</span
                                         >
                                       </p>
                                       <p
@@ -1161,7 +1161,7 @@
                                           ><img
                                             alt="Twitter"
                                             height="32"
-                                            src="images/twitter2x.png"
+                                            src="https://drive.google.com/uc?id=1k304t5vOlxtr2-GG8zN7ekIbInc3PXf-"
                                             style="
                                               display: block;
                                               height: auto;
