morph athletic logo added

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                   <div style="line-height: 10px">
                                     <img
                                       alt="Alternate text"
-                                      src="images/LOGO_WHITE_Horizontal_555555.png"
+                                      src="https://drive.google.com/uc?id=1xvzP-HweIN_Bj_m-Ow2ukgjh25WL_Urw"
                                       style="
                                         display: block;
                                         height: auto;
@@ -985,7 +985,7 @@
                                             font-size: 28px;
                                             color: #000080;
                                           "
-                                          >Happy Independence day! I'm excited to announce the promotion for 4th of July. Our store is up to 20% off at Morph Athletic go check it out.</span
+                                          >Happy Independence day! I'm excited to announce the promotion for 4th of July. Our store is up to 20% off at <span style="color:#d4af37 ;" >Morph Athletic</span> go check it out.</span
                                         >
                                       </p>
                                       <p
